--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digitalbazaar/oidc4vci-client",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "An OIDC4VCI client",
   "homepage": "https://github.com/digitalbazaar/oidc4vci-client",
   "author": {
