--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "c8": "^7.11.3",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
-    "eslint": "^8.17.0",
-    "eslint-config-digitalbazaar": "3.0",
-    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint": "^8.41.0",
+    "eslint-config-digitalbazaar": "^5.0.1",
+    "eslint-plugin-jsdoc": "^45.0.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "jsdoc": "^3.6.10",
-    "jsdoc-to-markdown": "^7.1.1",
+    "jsdoc": "^4.0.2",
+    "jsdoc-to-markdown": "^8.0.0",
     "karma": "^6.3.20",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.1",
