--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   ],
   "dependencies": {
     "@digitalbazaar/http-client": "^3.2.0",
-    "base64url-universal": "^2.0.0"
+    "base64url-universal": "^2.0.0",
+    "jsonpath-plus": "^7.2.0"
   },
   "devDependencies": {
     "c8": "^7.11.3",
