--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@digitalbazaar/http-client": "^3.2.0",
     "base64url-universal": "^2.0.0",
-    "jsonpath-plus": "^7.2.0"
+    "jsonpath-plus": "^7.2.0",
+    "jsonpointer": "^5.0.1"
   },
   "devDependencies": {
     "c8": "^7.11.3",
