--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@digitalbazaar/http-client": "^3.2.0",
     "base64url-universal": "^2.0.0",
     "jsonpath-plus": "^7.2.0",
-    "jsonpointer": "^5.0.1"
+    "jsonpointer": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "c8": "^7.11.3",
