--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@digitalbazaar/http-client": "^3.2.0",
     "base64url-universal": "^2.0.0",
+    "jose": "^4.15.4",
     "jsonpath-plus": "^7.2.0",
     "jsonpointer": "^5.0.1",
     "uuid": "^9.0.1"
