--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
   "dependencies": {
     "@digitalbazaar/http-client": "^4.0.0",
     "base64url-universal": "^2.0.0",
-    "jose": "^5.9.4",
-    "jsonpath-plus": "^10.0.0",
-    "jsonpointer": "^5.0.1",
-    "uuid": "^10.0.0"
+    "jose": "^6.0.12",
+    "jsonpath-plus": "^10.3.0",
+    "jsonpointer": "^5.0.1"
   },
   "devDependencies": {
     "c8": "^7.11.3",
