--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "@digitalbazaar/http-client": "^4.0.0",
     "base64url-universal": "^2.0.0",
-    "jose": "^6.0.13",
+    "jose": "^6.1.0",
     "jsonpath-plus": "^10.3.0",
     "jsonpointer": "^5.0.1",
     "pkijs": "^3.2.5"
   },
   "devDependencies": {
+    "@auth0/mdl": "^3.0.0",
+    "asn1js": "^3.0.6",
     "c8": "^10.1.3",
     "chai": "^4.3.6",
     "cross-env": "^10.0.0",
