--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@digitalbazaar/http-client": "^4.0.0",
     "base64url-universal": "^2.0.0",
     "jose": "^6.1.0",
+    "json-pointer": "^0.6.2",
     "jsonpath-plus": "^10.3.0",
-    "jsonpointer": "^5.0.1",
     "pkijs": "^3.2.5"
   },
   "devDependencies": {
